# random_coding

CUDA/: CMakeLists.txt  Makefile  main.cpp  main.cu
CUDA/BLAS/: axpy.cu  axpy.h
CUDA/env/: conda_environment.yml
CUDA/scratch/: Makefile
Conda/: Manual.md
Entities/: Pixel.py
FluidCellAutomata/: FluidCellAutomata.py  WindowPyGame.py
Notes/: notes.md
R/: GanttChart.R  Readme.md
R/GanttChart/: GanttChart.R
R/data/: adaptive_sph_timestep_velocity_only.csv  fixed_sph_timestep.csv  trace.csv
R/env/: conda_environment.yml
R/interactiveVisualizations/: NBA.R  Notes.md  html_files.R
R/shiny/: launcher.R
R/shiny/LoadAndPlotFiles/: app.R
R/shiny/app_playground/: app.R
R/shiny/hello_world_app/: app.R
TreeGeneration/: Tree.py  main.py
python/FluidCellAutomata/: Grid2D.py
python/TreeGeneration/: pygame_screen.py
python/pygame/Peteleco/: Board.py  Controller.py  Piece.py  main.py
python/pygame/env/: conda_environment.yml
python/shiny/: Notes.md
